force-app/main/default/objects/SOQL_Stored_Procedure__mdt/SOQL_Stored_Procedure__mdt.object-meta.xml
<CustomObject>
    <description>Used to standardize common SOQL Queries used by multiple processes</description>
    <label>SOQL Stored Procedure</label>
    <pluralLabel>SOQL Stored Procedures</pluralLabel>
</CustomObject>