force-app/main/default/objects/SOQL_Stored_Procedure__mdt/fields/Cache_Storage__c.field-meta.xml
<CustomField>
    <fullName>Cache_Storage__c</fullName>
    <label>Cache Storage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaction Only</fullName>
                <default>true</default>
                <label>Transaction Only</label>
            </value>
            <value>
                <fullName>Platform Cache</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>