force-app/main/default/objects/SOQL_Stored_Procedure__mdt/fields/Cache_TTL__c.field-meta.xml
<CustomField>
    <fullName>Cache_TTL__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Seconds to cache (0 = transaction only)</description>
    <inlineHelpText>Seconds to cache (0 = transaction only)</inlineHelpText>
    <label>Cache TTL</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>