force-app/main/default/objects/SOQL_Stored_Procedure__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description</description>
    <inlineHelpText>Human-readable description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>