force-app/main/default/objects/SOQL_Stored_Procedure__mdt/fields/Enforce_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Sharing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enforce Sharing</label>
    <type>Checkbox</type>
</CustomField>