force-app/main/default/objects/SOQL_Stored_Procedure__mdt/fields/Max_Results__c.field-meta.xml
<CustomField>
    <fullName>Max_Results__c</fullName>
    <description>Safety limit for results</description>
    <inlineHelpText>Safety limit for results</inlineHelpText>
    <label>Max Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>