force-app/main/default/objects/SOQL_Stored_Procedure__mdt/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>JSON array of parameter names: [&quot;accountName&quot;, &quot;minRevenue&quot;]</description>
    <inlineHelpText>JSON array of parameter names: [&quot;accountName&quot;, &quot;minRevenue&quot;]</inlineHelpText>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>