force-app/main/default/objects/SOQL_Stored_Procedure__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>The SOQL query template</description>
    <inlineHelpText>The SOQL query template</inlineHelpText>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>